build_err.txt
    Blocking waiting for file lock on build directory
   Compiling catest-embedding v0.1.0 (E:\CATEST\crates\embedding)
error[E0432]: unresolved import `embedding`
 --> crates\embedding\src\main.rs:2:5
  |
2 | use embedding::EmbeddingManager;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `embedding`
  |
  = help: if you wanted to use a crate named `embedding`, use `cargo add embedding` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `catest-embedding` (bin "catest-embedding") due to 1 previous error
